<resources>
    <string name="app_name">Notes Hub</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here\'s\nyour first\nstep with\nus!</string>
    <string name="mobile_number">Mobile number</string>
    <string name="or">OR</string>
    <string name="login_using_google">Login using Google</string>
    <string name="login_using_facebook">Login using Facebook</string>
    <string name="login_using_github">Login using Github</string>
    <string name="next">Next</string>
    <string name="continue_as">Continue as</string>
    <string name="guest">GUEST</string>
    <string name="name">Name</string>
    <string name="choose_profile">Choose profile</string>
    <string name="selected">Selected</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="manage">Manage</string>
    <string name="bin">Bin</string>
    <string name="add_notes">Add Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi</string>
    <string name="search_by_tags">Search by tags</string>
    <string name="todo">TODO</string>
    <string name="soon_a_camera_feature_will_be_available">Soon, a camera feature will be available.</string>
    <string name="go_back">Go back</string>
    <string name="heading">Heading</string>
    <string name="general">General</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="dummy_paragraph">I recently discovered I could make fudge with just chocolate chips, sweetened condensed milk, vanilla extract, and a thick pot on slow heat. I tried it with dark chocolate chunks and I tried it with semi-sweet chocolate chips. It\'s better with both kinds. It comes out pretty bad with just the dark chocolate. The best add-ins are crushed almonds and marshmallows what you get from that is Rocky Road. It takes about twenty minutes from start to fridge, and then it takes about six months to work off the twenty pounds you gain from eating it. All things in moderation, friends. All things in moderation.</string>
    <string name="note_will_be_moved_to_bin">Note will be moved to bin.</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
    <string name="to_add_your_first_note_click_here">To add your first note, click here.</string>

    <!--    -->


</resources>