<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dashHomeFragment"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/home" />

    <item
        android:id="@+id/dashCameraFragment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_camera"
        android:title="@string/camera" />

    <item
        android:id="@+id/dashManageFragment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_manage"
        android:title="@string/manage" />

    <item
        android:id="@+id/dashBinFragment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_sweep"
        android:title="@string/bin" />


</menu>