<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.auth.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="72dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="26dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="26dp" />

        <TextView
            android:id="@+id/tvGreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_s_nyour_first_nstep_with_nus"
            android:textColor="@color/mango_tango"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/hGuideline" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:contentDescription="@string/here_s_nyour_first_nstep_with_nus"
            android:src="@drawable/notes_illus"
            app:layout_constraintBottom_toBottomOf="@+id/tvGreet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvGreet" />

        <!--    <TextView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:text="Mobile"-->
        <!--        android:textColor="@color/dove_gray"-->
        <!--        android:textSize="14sp"-->
        <!--        app:layout_constraintStart_toStartOf="@id/vGuidelineStart"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/tvGreet" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputMobileNumber"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            app:hintTextColor="@color/dove_gray"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvGreet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/dove_gray"
                android:hint="@string/mobile_number"
                android:textColor="@color/mango_tango" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="40dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/background_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:cornerRadius="90dp"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputMobileNumber" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/llContinueAsGuest"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/btnNext">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/dove_gray"
                app:layout_constraintBottom_toBottomOf="@+id/tvOR"
                app:layout_constraintEnd_toStartOf="@+id/tvOR"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvOR" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/dove_gray"
                app:layout_constraintBottom_toBottomOf="@+id/tvOR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvOR"
                app:layout_constraintTop_toTopOf="@+id/tvOR" />

            <TextView
                android:id="@+id/tvOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/or"
                android:textColor="@color/dove_gray"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnGoogleLogin"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/login_using_google"
                android:src="@drawable/icon_google"
                app:layout_constraintEnd_toStartOf="@+id/btnFacebookLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOR" />

            <ImageButton
                android:id="@+id/btnFacebookLogin"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@null"
                android:contentDescription="@string/login_using_facebook"
                android:src="@drawable/icon_facebook"
                app:layout_constraintBottom_toBottomOf="@+id/btnGoogleLogin"
                app:layout_constraintEnd_toStartOf="@+id/btnGithubLogin"
                app:layout_constraintStart_toEndOf="@+id/btnGoogleLogin"
                app:layout_constraintTop_toTopOf="@+id/btnGoogleLogin" />

            <ImageButton
                android:id="@+id/btnGithubLogin"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginEnd="50dp"
                android:background="@null"
                android:contentDescription="@string/login_using_github"
                android:src="@drawable/icon_github"
                app:layout_constraintBottom_toBottomOf="@+id/btnGoogleLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFacebookLogin"
                app:layout_constraintTop_toTopOf="@+id/btnGoogleLogin" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llContinueAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_as"
                android:textColor="@color/dove_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                android:layout_marginStart="4dp"
                android:textColor="@color/mango_tango"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>