<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.dashboard.DashHomeFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="26dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vGuidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="26dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/home_dash_illus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hi"
            android:textColor="@color/mango_tango"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/hGuideline"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/choose_profile"
            android:src="@drawable/profile_1"
            app:layout_constraintBottom_toTopOf="@+id/hGuideline"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageButton" />

        <EditText
            android:id="@+id/etSearchBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/search_by_tags"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="20dp"
            android:paddingEnd="46dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/dove_gray_2"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/hGuideline" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/search_by_tags"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/etSearchBox"
            app:layout_constraintEnd_toEndOf="@+id/etSearchBox"
            app:layout_constraintTop_toTopOf="@id/etSearchBox"
            app:tint="@color/dove_gray_2" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/vGuidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/etSearchBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>